--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Игра в пары</title>
     <!-- <link rel="stylesheet" href="./css/normalize.css" /> -->
     <link rel="stylesheet" href="./css/style.css" />
-    <script src="js/main.js" defer></script>
+    <script src="js/main.js" defer type="module"></script>
   </head>
 
   <body>
